initial commit, changed post mapper to not get super visor data and moved it out so that we can do a singular db call, removed some dead code around the PostView type. Changed the Post entity to be LAZY fetch and added a new respository method to join fetch the required field, all to improve the performance